Wire up the testsuite for the OpenSSL module
Use a placeholder dependency for the unreleased module.
This makes it easier to run the testsuite with it (place the JAR in the
right location and run "ant test" with Java 17).